--- a/src/style.scss
+++ b/src/style.scss
@@ -39,6 +39,24 @@ html {
   width: 100%;
 }
 
+.innerBlock::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.innerBlock:hover::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 // Block Name
 .wp-block-prefix-block-name {
   * {
